k8s/chapter5/5.16/ingress.yml
# 인그레스 설치
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-5-16
spec:
  ingressClassName: nginx # 이게 없으면 배포가 안되나?
  tls:
  - hosts:
      - kubia.example.com
    secretName: tls-secret
  rules:
    - host: kubia.example.com
      http:
        paths:
        - path: /hello-tls
          pathType: Prefix
          backend:
            service:
              name: kubia-nodeport
              port:
                number: 80
